Tue, Feb 24, 2026, 10:30 AM -08:00

--- a/search.html
+++ b/search.html
@@ -14,5 +14,6 @@
         </button>
     </div>
     <script scr="https://kit.fontawsome.com/c513779648.js" crossorgin="anonymous"></script>
+    <script scr=script/search.js></script>
 </body>
 </html>
