Fri, Feb 27, 2026, 9:43 AM -08:00

--- a/search.html
+++ b/search.html
@@ -6,14 +6,17 @@
     <title>Search</title>
     <link rel="stylesheet" href="style/search.css">
 </head>
+
 <body>
-    <div class ="search">
-        <input type="text" class="input" placeholder= "Search...">
+    <div class ="search ">
+        <input class= "input" type="text" placeholder= "Search...">
         <button class= "btn">
             <i class= "fa-solid fa-magnifying-glass"></i>
         </button>
     </div>
-    <script scr="https://kit.fontawsome.com/c513779648.js" crossorgin="anonymous"></script>
-    <script scr=script/search.js></script>
+    <script scr="test.js"></script>
+    <script src="https://kit.fontawesome.com/c513779648.js" crossorigin="anonymous"></script>
 </body>
+
+
 </html>
