--- a/search.html
+++ b/search.html
@@ -14,7 +14,7 @@
             <i class= "fa-solid fa-magnifying-glass"></i>
         </button>
     </div>
-    <script scr="test.js"></script>
+    <script src="test.js"></script>
     <script src="https://kit.fontawesome.com/c513779648.js" crossorigin="anonymous"></script>
 </body>
 
