--- a/expanding.html
+++ b/expanding.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="panal"></div>
     </div>
 
     <script src="script/expanding.js"></script>
