--- a/expanding.html
+++ b/expanding.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="panal"></div>
+        <div class="panal" style="background-image: url('images/building.avif')"></div>
     </div>
 
     <script src="script/expanding.js"></script>
