Fri, Feb 27, 2026, 9:57 AM -08:00

--- a/expanding.html
+++ b/expanding.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="panal" style="background-image: url('images/building.avif')"></div>
+        <div class="panal" style="background-image: url('images/building.avif')">
+            <h3>building</h3>
+        </div>
     </div>
 
     <script src="script/expanding.js"></script>
