--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
    this is my home page
    <a href="loading.html">This is my coading page.</a>
    <a href="search.html">This is my search page.</a>
+   <a href="expanding.html">This is my image page</a>
 </body>
 </html>
